solves datepicker obscuring using js to set z-index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -231,19 +231,13 @@ footer {
 
 .round-top-corners {
       -webkit-border-radius: 5px 5px 0px 0px; 
-      -moz-border-radius: 5px 5px 0px 0px;
-      -o-border-radius: 5px 5px 0px 0px;
       border-radius: 5px 5px 0px 0px;
 }
 .round-bottom-corners {
       -webkit-border-radius: 0px 0px 5px 5px; 
-      -moz-border-radius:    0px 0px 5px 5px;
-      -o-border-radius:      0px 0px 5px 5px;
       border-radius:         0px 0px 5px 5px;
 }
 .round-corners {
       -webkit-border-radius: 5px 5px 5px 5px; 
-      -moz-border-radius: 5px 5px 5px 5px;
-      -o-border-radius: 5px 5px 5px 5px;
       border-radius: 5px 5px 5px 5px;
 }
